--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "epicquery",
+  "name": "epiquery",
   "version": "0.0.1",
   "description": "run templated queries from the https",
   "main": "./bin/epic-server",
@@ -32,10 +32,10 @@
     "url":  "git://github.com/intimonkey/epic-query.git"
   },
   "scripts": {
-    "start": "./node_modules/forever/bin/forever start --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
-    "debug": "./node_modules/forever/bin/forever --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
-    "stop": "./node_modules/forever/bin/forever stop `./node_modules/forever/bin/forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
-    "status": "./node_modules/forever/bin/forever list",
+    "start": "./node_modules/.bin/forever start --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
+    "debug": "./node_modules/.bin/forever --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
+    "stop": "./node_modules/.bin/forever stop `./node_modules/forever/bin/forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
+    "status": "./node_modules/.bin/forever list",
     "test": "./bin/test",
     "predeploy": "",
     "postdeploy": ""
