--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "db_user":"",
     "db_password":"",
     "template_directory": "./templates",
+    "template_repository": "git://github.com/intimonkey/epic-query.git",
     "http_port":"8080"
   },
   "engine": {
