--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "forever": "0.10.0",
     "underscore": "1.4.4",
     "tedious": "0.1.3",
-    "dot": "1.0.1"
+    "dot": "1.0.1",
+    "q": "0.9.2"
   },
   "bin": {
 
