--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "db_user":"",
     "db_password":"",
     "template_directory": "./templates",
-    "template_repository": "git://github.com/intimonkey/epic-query.git",
+    "template_repository": "git@github.com:intimonkey/epiquery-templates.git",
     "http_port":"8080"
   },
   "engine": {
@@ -34,11 +34,11 @@
     "url":  "git://github.com/intimonkey/epic-query.git"
   },
   "scripts": {
-    "start": "./node_modules/.bin/forever start --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
-    "debug": "./node_modules/.bin/forever --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
-    "stop": "./node_modules/.bin/forever stop `./node_modules/forever/bin/forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
-    "status": "./node_modules/.bin/forever list",
-    "test": "./bin/test",
+    "start": "node_modules/.bin/forever start --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
+    "debug": "node_modules/.bin/forever --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
+    "stop": "node_modules/.bin/forever stop `./node_modules/forever/bin/forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
+    "status": "node_modules/.bin/forever list",
+    "test": "bin/test",
     "predeploy": "",
     "postdeploy": ""
   },
