--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "db_host":"",
     "db_user":"",
     "db_password":"",
-    "template_directory": "./templates",
-    "template_repository": "git@github.com:intimonkey/epiquery-templates.git",
+    "template_directory": "",
+    "template_repository": "",
     "http_port":"8080"
   },
   "engine": {
@@ -39,6 +39,7 @@
     "stop": "node_modules/.bin/forever stop `./node_modules/forever/bin/forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
     "status": "node_modules/.bin/forever list",
     "test": "bin/test",
+    "update_templates": "pwd ; bin/update_or_clone_repo ${npm_package_config_template_directory} ${npm_package_config_template_repository}",
     "predeploy": "",
     "postdeploy": ""
   },
