--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "db_password":"",
     "template_directory": "",
     "template_repository": "",
+    "template_update_interval": "",
     "http_port":"8080"
   },
   "engine": {
@@ -35,11 +36,12 @@
   },
   "scripts": {
     "start": "node_modules/.bin/forever start --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
-    "debug": "node_modules/.bin/forever --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
-    "stop": "node_modules/.bin/forever stop `./node_modules/forever/bin/forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
+    "debug": "npm run-script watch_templates_for_updates ; node_modules/.bin/forever --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
+    "stop": "node_modules/.bin/forever stop `./node_modules/.bin/forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
     "status": "node_modules/.bin/forever list",
     "test": "bin/test",
-    "update_templates": "pwd ; bin/update_or_clone_repo ${npm_package_config_template_directory} ${npm_package_config_template_repository}",
+    "update_templates": "bin/update_or_clone_repo ${npm_package_config_template_directory} ${npm_package_config_template_repository}",
+    "watch_templates_for_updates": "node_modules/.bin/forever start --append -c ./node_modules/.bin/coffee ./bin/update_templates", 
     "predeploy": "",
     "postdeploy": ""
   },
