--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "q": "0.9.2"
   },
   "bin": {
-
+    "update_repo_dir": "bin/update_or_clone_repo"
   },
   "config": {
     "db_port":"",
@@ -35,12 +35,13 @@
     "url":  "git://github.com/intimonkey/epic-query.git"
   },
   "scripts": {
-    "start": "node_modules/.bin/forever start --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
-    "debug": "npm run-script watch_templates_for_updates ; node_modules/.bin/forever --append --watchDirectory ./bin --watch -c ./node_modules/coffee-script/bin/coffee bin/epic-server",
-    "stop": "node_modules/.bin/forever stop `./node_modules/.bin/forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
-    "status": "node_modules/.bin/forever list",
-    "test": "bin/test",
-    "update_templates": "bin/update_or_clone_repo ${npm_package_config_template_directory} ${npm_package_config_template_repository}",
+    "start": "npm run-script update_templates ; forever start --append --watchDirectory ./bin --watch -c coffee bin/epic-server",
+    "debug": "forever --append --watchDirectory ./bin --watch -c coffee bin/epic-server",
+    "stop": "forever stop `forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
+    "status": "forever list",
+    "show-env": "bin/test",
+    "update_templates": "forever start --append -c coffee ./bin/run_process_at_interval \"./bin/update_or_clone_repo ${npm_package_config_template_directory} ${npm_package_config_template_repository}\" ${npm_package_config_template_update_interval}",
+    "test": "npm run-script show-env",
     "predeploy": "",
     "postdeploy": ""
   },
