--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "url":  "git://github.com/intimonkey/epic-query.git"
   },
   "scripts": {
-    "start": "npm run-script update_templates ; forever start --append --watchDirectory ./bin --watch -c coffee bin/epic-server",
+    "start": "npm run-script update_templates ; ./bin/epic-start",
     "debug": "forever --append --watchDirectory ./bin --watch -c coffee bin/epic-server",
-    "stop": "forever stop `forever list | grep epic-server | awk '{ print $2 }' | sed -e 's/\\[//g' | sed -e 's/\\]//g'`",
+    "stop": "forever stopall",
     "status": "forever list",
     "show-env": "bin/test",
-    "update_templates": "forever start --append -c coffee ./bin/run_process_at_interval \"./bin/update_or_clone_repo ${npm_package_config_template_directory} ${npm_package_config_template_repository}\" ${npm_package_config_template_update_interval}",
+    "update_templates": "forever start --append -c coffee ./bin/epic-run_process_at_interval \"./bin/update_or_clone_repo ${npm_package_config_template_directory} ${npm_package_config_template_repository}\" ${npm_package_config_template_update_interval}",
     "test": "npm run-script show-env",
     "predeploy": "",
     "postdeploy": ""
