--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "underscore": "1.4.4",
     "tedious": "0.1.3",
     "dot": "1.0.1",
+    "hogan.js": "2.0.0",
     "q": "0.9.2"
   },
   "bin": {
@@ -28,7 +29,7 @@
     "http_port":"8080"
   },
   "engine": {
-    "node": "0.10.1"
+    "node": "0.10.3"
   },
   "repository": {
     "type": "git",
