--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "tedious": "0.1.4",
     "dot": "1.0.1",
     "hogan.js": "2.0.0",
+    "handlebars": "1.0.10",
     "q": "0.9.2",
     "mysql": "2.0.0-alpha7"
   },
