--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "docopt": "0.4.0",
     "forever": "0.10.0",
     "underscore": "1.4.4",
-    "tedious": "0.1.4",
+    "tedious": "git+https://github.com/intimonkey/tedious.git",
     "dot": "1.0.1",
     "hogan.js": "2.0.0",
     "handlebars": "1.0.10",
