--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "hogan.js": "2.0.0",
     "handlebars": "1.0.10",
     "q": "0.9.2",
-    "mysql": "2.0.0-alpha7"
+    "mysql": "2.0.0-alpha7",
+    "xmla4js": "git+https://github.com/glg/xmla4js.git"
   },
   "bin": {
     "update_repo_dir": "bin/update_or_clone_repo"
