--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "socket.io-client": "0.9.16"
   },
   "dependencies": {
-    "socket.io": "0.9.13",
-    "coffee-script": "1.6.2",
-    "express": "3.1.0",
+    "coffee-script": "1.9.3",
     "docopt": "0.4.0",
-    "forever": "0.10.0",
-    "underscore": "1.4.4",
-    "tedious": "git+https://github.com/intimonkey/tedious.git",
     "dot": "1.0.1",
-    "hogan.js": "2.0.0",
+    "express": "3.1.0",
+    "forever": "0.10.0",
     "handlebars": "1.0.10",
-    "q": "0.9.2",
+    "hogan.js": "2.0.0",
     "mysql": "2.0.0-alpha7",
-    "xmla4js": "git+https://github.com/glg/xmla4js.git",
-    "simplog": "0.0.6"
+    "q": "0.9.2",
+    "simplog": "0.0.6",
+    "tedious": "git+https://github.com/intimonkey/tedious.git",
+    "underscore": "1.4.4",
+    "xmla4js": "git+https://github.com/glg/xmla4js.git"
   },
   "bin": {
     "update_repo_dir": "bin/update_or_clone_repo"
