--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "optimist": "0.6.0"
   },
   "dependencies": {
+    "bluebird": "^2.9.34",
     "coffee-script": "1.9.3",
     "docopt": "0.4.0",
     "dot": "1.0.1",
