--- a/package.json
+++ b/package.json
@@ -2,21 +2,17 @@
   "name": "epiquery",
   "version": "0.1.0",
   "description": "run templated queries from the http's",
-  "devDependencies": {
-    "optimist": "0.6.0"
-  },
   "dependencies": {
-    "bluebird": "^2.9.34",
     "coffee-script": "1.9.3",
     "docopt": "0.4.0",
     "dot": "1.0.1",
     "express": "3.1.0",
+    "generic-pool": "2.2.0",
     "hogan.js": "2.0.0",
     "mysql": "2.0.0-alpha7",
     "q": "0.9.2",
     "simplog": "0.0.6",
     "tedious": "1.11.0",
-    "tedious-connection-pool": "0.3.5",
     "underscore": "1.4.4",
     "xmla4js": "git+https://github.com/glg/xmla4js.git"
   },
