--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docopt": "0.4.0",
     "dot": "1.0.1",
     "express": "3.1.0",
+    "express-jwt": "^3.0.1",
     "hogan.js": "2.0.0",
     "mysql": "2.0.0-alpha7",
     "q": "0.9.2",
