--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "simplog": "0.0.6",
     "tedious": "1.11.0",
     "underscore": "1.4.4",
-    "xmla4js": "git+https://github.com/glg/xmla4js.git",
-    "underscore.string": "3.2.2",
-    "lodash": "4.0.0",
-    "moment-timezone": "0.5.0"
+    "xmla4js": "git+https://github.com/glg/xmla4js.git"
   },
   "engines": {
     "node": "0.12.7"
