more helpers for transforms

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hogan.js": "2.0.0",
     "lodash": "4.0.0",
     "moment": "2.11.1",
+    "moment-timezone": "0.5.0",
     "mysql": "2.0.0-alpha7",
     "q": "0.9.2",
     "simplog": "0.0.6",
